# Projeto-Hotel-Alg-II

./: .gitignore  CMakeLists.txt  README.md  estrutura.c  main.c  recibo_consumo_venda_1.txt  recibo_consumo_venda_2.txt
bib/: acomodacoes.h  categorias.h  compras.h  contas.h  controleDeCaixa.h  estadias.h  fornecedores.h  hospedes.h  hotel.h  importacaoExportacao.h  operadores.h  produtos.h  reservas.h  utils.h  vendas.h
service/: acomodacoes.c  categorias.c  compras.c  contas.c  controleDeCaixa.c  estadias.c  fornecedores.c  hospedes.c  hotel.c  importacaoExportacao.c  operadores.c  produtos.c  reservas.c  utils.c  vendas.c
